argocd_demo/viewmotion_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-service
  namespace: api-demo
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vue-service
  namespace: api-demo
subsets:
  - addresses:
      - ip: 172.16.10.159
    ports:
      - port: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuemotion-ingress
  namespace: api-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  tls:
    - hosts:
        - vue.ace-mc-bohol.com
      secretName: vuemotion-tls-secret
  rules:
    - host: vue.ace-mc-bohol.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vue-service
                port:
                  number: 443
